# matrix-bot

./: .access_token_old  .gitignore  .tokeignore  Cargo.toml  ERROR CONVERSION TODO LIST.md  README.md  TODO.md  sample.txt  sample_config.toml
.github/workflows/: rust.yml
debian/: changelog  control  copyright  install  matrix-bot.service  postinst  postrm.ex  preinst  prerm.ex
debian/conf/: matrix-bot
src/: bot.rs  config.rs  database.rs  error.rs  events.rs  handler.rs  logging.rs  main.rs  messages.rs  regex.rs  session.rs
src/bot/: mod.rs
src/config/: mod.rs
src/database/: mod.rs  models.rs
src/handlers/: correct_spelling.rs  help_handler.rs  helpers.rs  mod.rs  no_command.rs  roll.rs  unit_conversion.rs  unit_conversion_handler.rs
src/handlers/commandless_handler/: docs_link.rs  github_search.rs  group_ping.rs  link_url.rs  mod.rs  spellcheck.rs  unit_conversion.rs
src/handlers/invite_handler/: accept_invite.rs  mod.rs  reject_invite.rs
src/helpers/: bot_response.rs  check_format.rs  clean_text.rs  convert_unit.rs  mod.rs
src/macros/: mod.rs
src/matrix/: listener.rs  mod.rs  responder.rs
src/matrix_handlers/: mod.rs
src/matrix_handlers/listeners/: ban_handler.rs  help_handler.rs  mod.rs  unit_conversion_handler.rs
src/matrix_handlers/listeners/commandless_handler/: github_search.rs  group_ping.rs  link_url.rs  mod.rs  spellcheck.rs  text_expansion.rs  unit_conversion.rs
src/matrix_handlers/responders/: mod.rs
src/messages/: mod.rs
src/queries/: github_issueorpull.graphql  github_schema.graphql  mod.rs
src/queries/tests/: common.rs  mod.rs
src/regex/: mod.rs
src/regex/tests/: command_conversion_tests.rs  conversion_tests.rs  mod.rs  no_bang_tests.rs  regex_tests.rs
src/services/: mod.rs
src/services/matrix/: listener.rs  mod.rs  responder.rs
src/services/matrix/matrix_handlers/listeners/: ban_handler.rs  help_handler.rs  mod.rs  unit_conversion_handler.rs
src/services/matrix/matrix_handlers/listeners/commandless_handler/: github_search.rs  group_ping.rs  link_url.rs  mod.rs  text_expansion.rs  unit_conversion.rs
src/services/matrix/matrix_handlers/responders/: mod.rs
src/services/webhook/: listener.rs  mod.rs
src/services/webhook/webhook_handlers/: message.rs  mod.rs
src/webhook/: listener.rs
src/webhook_handlers/: github.rs  message.rs  mod.rs
