[package]
name = "matrix-bot"
version = "2.0.0-beta.18"
authors = ["sparky8251 <sparky@possumlodge.me>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sparky8251/matrix-bot/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assign = "1.1"
futures = "0.3"
graphql_client = "0.11"
http = "0.2"
lazy_static = "1.4"
regex = "1.4"
axum = "0.5"
ron = "0.8"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
uom = "0.33"
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex-literal = "0.3"
hex = "0.4.2"
sled = "0.34"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.ruma]
version = "0.7"
features = ["client-api-c", "client-ext-client-api", "client-reqwest", "unstable-msc2676"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.5"
features = ["signal", "macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
