[package]
name = "matrix-bot"
version = "2.0.0-beta.18"
authors = ["sparky8251 <sparky@possumlodge.me>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sparky8251/matrix-bot/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.11"
once_cell = "1"
regex = "1"
axum = "0.5"
ron = "0.8"
toml = "0.5"
tracing = "0.1"
uom = "0.33"
serde_json = "1"
#anyhow = "1"
figment = "0.10"

# Deps below are for unimplemented secured github webhook listener.
#hmac = "0.12"
#sha2 = "0.10"
#hex-literal = "0.3"
#hex = "0.4"

#[dependencies.rusqlite]
#version = "0.28"
#features = ["bundled"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.ruma]
version = "0.7"
features = ["client-api-c", "client-ext-client-api", "client-reqwest", "unstable-msc2676"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["signal", "macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]